--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:id="@+id/tv_movie_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
@@ -40,11 +40,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
         android:layout_marginTop="98dp"
         app:layout_constraintLeft_toRightOf="@+id/textView2"
         android:layout_marginLeft="2dp"
-        app:layout_constraintHorizontal_bias="0.503" />
+        app:layout_constraintHorizontal_bias="0.503"
+        android:layout_marginStart="2dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -60,15 +61,14 @@
 
     <TextView
         android:id="@+id/tv_movie_overview"
-        android:layout_width="368dp"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:textSize="22dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintLeft_toLeftOf="@id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <TextView
         android:id="@+id/textView2"
@@ -78,7 +78,14 @@
         android:layout_marginTop="98dp"
         android:text="@string/movie_rating_label"
         app:layout_constraintLeft_toRightOf="@+id/imv_movie_thumbnail"
-        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
+        android:layout_marginStart="80dp" />
+    <TextView
+        android:id="@+id/tv_movie_release_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
 
 </android.support.constraint.ConstraintLayout>
 </ScrollView>
