--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -55,6 +56,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:textStyle="bold" />
+                <Button
+                    android:id="@+id/btn_favourite_movie"
+                    android:text="@string/button_favourite_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </LinearLayout>
 
@@ -78,3 +84,4 @@
             android:textSize="18sp" />
     </LinearLayout>
 </ScrollView>
+</layout>
