--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,7 +4,8 @@
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,10 +58,11 @@
                         android:layout_marginTop="16dp"
                         android:textStyle="bold" />
 
-                    <Button
+                    <ImageButton
+                        android:src="@drawable/unfav"
                         android:id="@+id/btn_favourite_movie"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         android:layout_marginTop="16dp"
                         android:onClick="toggleFavourites"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
