--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_sort"
         android:orderInCategory="0"
         android:title="@string/action_sort_popular"/>
     <item android:id="@+id/action_favourite_movies"
-        android:title="@string/action_favourite_movies"
-        android:orderInCategory="1"/>
+        android:orderInCategory="1"
+        android:title="@string/action_favourite_movies" />
 </menu>
