--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/background"
     android:elevation="8dp"
-    android:layout_margin="4dp"
-    android:background="#dadada">
+    android:orientation="vertical">
 
-    <ImageView
-        android:adjustViewBounds="true"
-        android:id="@+id/imv_movie_item"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/item_movies_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/app_name"
-        android:elevation="8dp" />
+        android:layout_margin="8dp">
+
+        <ImageView
+            android:id="@+id/imv_movie_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/app_name"
+            android:elevation="8dp" />
+    </android.support.v7.widget.CardView>
 </FrameLayout>
