--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dharan1011.popular_movie_app.LoginActivity">
+    tools:context="com.example.dharan1011.popular_movie_app.ResetPasswordActivity">
 
 </android.support.constraint.ConstraintLayout>
