--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -129,15 +129,15 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/button_already_registered"
+        app:layout_constraintBottom_toTopOf="@+id/button_sign_up"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/button_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@null"
