Fixed app crash and user data pushed to Firebase database

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF5252</color>
     <color name="entry_text_color">#2E427C</color>
     <color name="button_text_color">#2996AA</color>
-    <color name="text_color_hint_white">ffffff</color>
+    <color name="text_color_hint_white">#ffffff</color>
 </resources>
