--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,4 +7,8 @@
     <item android:id="@+id/action_favourite_movies"
         android:orderInCategory="1"
         android:title="@string/action_favourite_movies" />
+    <item
+        android:id="@+id/action_sign_out"
+        android:orderInCategory="2"
+        android:title="@string/sign_out" />
 </menu>
