--- a/app/src/main/res/drawable-hdpi/background.xml
+++ b/app/src/main/res/drawable-hdpi/background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="315"
-        android:endColor="#FBC02D"
-        android:startColor="#FF5252" />
+        android:endColor="#ffffff"
+        android:startColor="#b3e5fc" />
 </shape>
