--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_movie_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp" />
 
     <ProgressBar
         android:id="@+id/pb_loading"
