--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,7 +3,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background"
     android:elevation="8dp"
     android:orientation="vertical">
 
@@ -11,15 +10,18 @@
         android:id="@+id/item_movies_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp">
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="8dp">
 
         <ImageView
             android:id="@+id/imv_movie_item"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
             android:adjustViewBounds="true"
+            android:background="@drawable/background"
             android:contentDescription="@string/app_name"
-            android:elevation="8dp" />
+            android:elevation="8dp"
+            android:padding="8dp" />
     </android.support.v7.widget.CardView>
 </FrameLayout>
