--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -98,12 +98,18 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold" />
 
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                app:cardCornerRadius="5dp">
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/container_background"
                 android:padding="4dp">
 
                 <android.support.v7.widget.RecyclerView
@@ -128,6 +134,7 @@
                     android:layout_gravity="center"
                     android:visibility="invisible" />
             </FrameLayout>
+            </android.support.v7.widget.CardView>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -139,13 +146,20 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold" />
 
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp">
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/container_background"
                 android:padding="4dp">
 
                 <android.support.v7.widget.RecyclerView
@@ -153,6 +167,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="invisible" />
+
+
 
                 <TextView
                     android:id="@+id/tv_reviews_error"
@@ -170,6 +186,7 @@
                     android:layout_gravity="center"
                     android:visibility="invisible" />
             </FrameLayout>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
     </ScrollView>
 </layout>
